# distromax

./: .gitattributes  .gitignore  .gitlab-ci.yml  .zenodo.json  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/workflows/: publish-pypi.yml  python-publish.yml  run-pytest.yml  tests.yml
distromax/: __init__.py  _version.py  analytical.py  fit.py  logging.py
examples/: Chi2Distribution.py  Chi2WithOutlier.py
logo/: make_logo.py
src/distromax/: __init__.py  analytical.py  fit.py
tests/: test.py  test_distromax.py  utils_for_testing.py
