[metadata]
name = distromax
author = Rodrigo Tenorio, Luana Modafferi, David Keitel, Alicia M. Sintes
author_email = rodrigo.tenorio@ligo.org
maintainer = Rodrigo Tenorio
maintainer_email = rodrigo.tenorio@ligo.org
license = LICENSE.md
description = Empirically estimating the distribution of the loudest candidate from a gravitational-wave search
url = https://github.com/Rodrigo-Tenorio/distromax
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Intended Audience :: Science/Research
project_urls =
    Issue tracker = https://github.com/Rodrigo-Tenorio/distromax/issues

[options]
packages = distromax
python_requires = >= 3.8

install_requires = 
    numpy
    scipy
    scikit-image
    tqdm

[options.extras_require]
examples = matplotlib
tests = pytest; flaky
